--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/startapp_banner"
+        app:layout_constraintBottom_toTopOf="@+id/startapp_banner" />
 
     <com.hhst.youtubelite.player.LitePlayerView
         android:id="@+id/playerView"
@@ -24,14 +24,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-app:layout_constraintBottom_toTopOf="@+id/startapp_banner"
+        app:layout_constraintBottom_toTopOf="@+id/startapp_banner"
         android:background="@android:color/black"
         android:visibility="gone"
         app:use_controller="true"
         app:show_timeout="0"
         app:show_buffering="always"
-        app:controller_layout_id="@layout/player_view"/>
-<com.startapp.sdk.ads.banner.Banner
+        app:controller_layout_id="@layout/player_view" />
+
+    <com.startapp.sdk.ads.banner.Banner
         android:id="@+id/startapp_banner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
